# Mission-Oriented-GP-Motion-Planning

./: .gitignore  .gitmodules  CMakeLists.txt  Planning2D.cpp  Planning2D.h  Planning3D.cpp  Planning3D.h  README.md  main.cpp  wrapper.cpp
benchmark/GA/: CMakeLists.txt
benchmark/GA/include/: GeneticAlgorithm.h
benchmark/GA/src/: GAPlanning.cpp  GeneticAlgorithm.cpp
benchmark/ompl/: CMakeLists.txt
benchmark/ompl/include/: OMPLConstraint.h  OMPLHelper.h  OMPLObjective.h
benchmark/ompl/src/: KPiecePlanning.cpp  OMPLHelper.cpp  PRMPlanning.cpp  RRTstarPlanning.cpp
benchmark/stomp/: CMakeLists.txt
benchmark/stomp/include/: STOMPHelper.h
benchmark/stomp/include/stomp/: stomp.h
benchmark/stomp/src/: STOMPHelper.cpp  stomp.cpp  stompPlanning.cpp
data/: STR.yaml
data/NYC/: NYCsmall.yaml
data/NYC/100/: NYC100_u.csv  NYC100_v.csv  depth_grid_NYC_small.csv
data/str/: current_depth_map.csv  depth_grid2.csv  v_mean.csv
gpmp2/: CMakeLists.txt
gpmp2/dynamics/: VehicleDynamics.h  VehicleDynamicsFactorPose2.h  VehicleDynamicsFactorPose3.h  VehicleDynamicsFactorWithCurrentPose3.h
gpmp2/gp/: GPutils.cpp  GPutils.h  GaussianProcessInterpolatorLie.h  GaussianProcessInterpolatorLinear.h  GaussianProcessInterpolatorPose2.h  GaussianProcessInterpolatorPose3.h  GaussianProcessPriorLie.h  GaussianProcessPriorLinear.h  GaussianProcessPriorPose2.h  GaussianProcessPriorPose3.h  WaterCurrentGaussianProcessPrior.h
gpmp2/kinematics/: ForwardKinematics-inl.h  ForwardKinematics.h  PointRobot.cpp  PointRobot.h  PointRobotModel.h  Pose2MobileBase.cpp  Pose2MobileBase.h  Pose2MobileBaseModel.h  Pose3MobileBase.cpp  Pose3MobileBase.h  Pose3MobileBaseModel.h  RobotModel-inl.h  RobotModel.h
gpmp2/mission/: Seafloor.h  SeafloorCost.h  SeafloorFactor-inl.h  SeafloorFactor.h  SeafloorFactorGP-inl.h  SeafloorFactorGP.h  SeafloorFactorGPPose3MobileBase.h  SeafloorFactorPose3MobileBase.h  SealevelFactor.h  SealevelFactorGP-inl.h  SealevelFactorGP.h  SealevelFactorGPPose3MobileBase.h  SealevelFactorPose3MobileBase.h  WaterCurrent3DVehicleDynamicsPose3.h  WaterCurrentGrid.h
gpmp2/obstacle/: ObstacleCost.h  ObstaclePlanarSDFFactor-inl.h  ObstaclePlanarSDFFactor.h  ObstaclePlanarSDFFactorGP-inl.h  ObstaclePlanarSDFFactorGP.h  ObstaclePlanarSDFFactorGPPointRobot.h  ObstaclePlanarSDFFactorGPPose2MobileBase.h  ObstaclePlanarSDFFactorPose2MobileBase.h  ObstacleSDFFactor-inl.h  ObstacleSDFFactor.h  ObstacleSDFFactorGP-inl.h  ObstacleSDFFactorGP.h  ObstacleSDFFactorGPPose3MobileBase.h  ObstacleSDFFactorPose3MobileBase.h  PlanarSDF.h  SDFexception.h  SignedDistanceField.cpp  SignedDistanceField.h
include/: CMakeCache.txt  Makefile  OMPLHelper.h  Planning.h  Planning2D.h  Planning3D.h  Planning3DUUV.h  SignedDistanceField.h  Visualization.h  YAMLReader.h  cmake_install.cmake
scripts/: generateSDF.py  test.py  visualization.py
scripts/dexter_related/stomp/problems/: stomp_explored_NYC.dex  templateNYC.txt  test.dex
scripts/dexter_related/stomp/problems/NYC/: result.txt  tmp.yaml
scripts/dexter_related/stomp/simulators/: NYCsmallmultirun.yaml  __init__.py  stomp_simulator.py
scripts/peratonSimulator/BaselineModules/: baseline_UUV_depth.py
src/: CMakeLists.txt  MobileRobot3DPlanning.cpp  OMPLHelper.cpp  Planning2D.cpp  Planning3D.cpp  Planning3DUUV.cpp  PointRobot2DPlanning.cpp  PointRobot3DPlanning.cpp  main.cpp  wrapper.cpp
test/: KPiecePlanning.cpp  Mobile3DNYC.cpp  MobileRobot3DPlanning.cpp  PointRobot3DPlanning.cpp  RRTstarPlanning.cpp  main.cpp
tests/: CMakeLists.txt  Mobile3DNYC.cpp  Mobile3DPlanning.cpp  MobileRobot2DPlanning.cpp  MobileRobot3DPlanning.cpp  PointRobot3DPlanning.cpp  main.cpp  test.cpp
